k8s/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular
  labels:
    app: mts
    tier: angular
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
    name: http
  selector:
    app: mts
    tier: angular
