k8s/java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java
  labels:
    app: mts
    tier: java
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: http
  selector:
    app: mts
    tier: java
